# pourpoint

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASING.md  THIRD_PARTY_LICENSES.md  mkdocs.yml
.github/workflows/: build-wheels.yaml  ci.yml  docs.yml
LICENSES/: README.md  xz.txt
ci/: config.sh  copy_gdal_data.sh  wheel_smoke_test.py
crates/core/: Cargo.toml  README.md
crates/core/benches/: dissolve_strategy.rs
crates/core/examples/: bench_delineation.rs
crates/core/src/: assembly.rs  cache.rs  cog.rs  engine.rs  error.rs  lib.rs  parquet_cache.rs  refinement.rs  resolver.rs  runtime.rs  session.rs  source.rs  source_telemetry.rs  staged.rs  test_raster_source.rs  testutil.rs
crates/core/src/algo/: accumulation_tile.rs  area.rs  canonical_wkb.rs  dissolve.rs  flow_dir.rs  flow_direction_tile.rs  geo_transform.rs  mod.rs  polygonize.rs  projection.rs  raster_tile.rs  rasterize.rs  refine.rs  snap.rs  snap_threshold.rs  trace.rs  traits.rs  upstream.rs  wkb.rs
crates/core/src/export/: identity.rs  mod.rs  row_groups.rs  schema.rs  spatial.rs  writer.rs
crates/core/src/reader/: catchment_store.rs  catchment_store_perf_tests.rs  graph.rs  id_index.rs  manifest.rs  mod.rs  snap_store.rs
crates/core/src/telemetry/: jsonl.rs  mod.rs
crates/core/tests/: d8_aux_accessor.rs  d8_refinement_parity.rs  equal_earth_projection.rs  finest_level_resolution.rs  graph_parquet_reader.rs  hfx_v02_loader.rs  hfx_v02_test_fixtures.rs  hydrobasins_snap.rs  object_store_integration.rs  outlet_resolution.rs  parity_golden_artifacts.rs  parity_v01_oracle_capture.rs  session_open.rs  snap_aux_reader.rs  snap_resolution_cascade.rs  staged_delineation.rs
crates/core/tests/fixtures/export/: basin-geoparquet-golden.parquet
crates/core/tests/fixtures/parity/: README.md  seed_golden.json
crates/core/tests/fixtures/parity/goldens/tiny-with-aux-d8-projected-grass/: projected_grass_refined.json
crates/core/tests/fixtures/parity/goldens/v01_grit_nonrefined/: README.md  oracle_a_grit_nonrefined.json
crates/core/tests/fixtures/parity/goldens/v01_merit_refined/: README.md  oracle_c_merit_refined.json
crates/core/tests/fixtures/parity/goldens/v01_synthetic_refined/: oracle_b_synthetic_refined.json
crates/core/tests/fixtures/parity/goldens/v021_synthetic_nonrefined/: README.md  v021_synthetic_nonrefined.json
crates/core/tests/fixtures/parity/tiny-with-aux-d8-projected-grass/: README.md  catchments.parquet  graph.parquet  manifest.json
crates/core/tests/fixtures/parity/v01_synthetic_refined/: catchments.parquet  graph.arrow  manifest.json
crates/core/tests/fixtures/parity/v021_synthetic_refined/: catchments.parquet  flow_acc.tif  flow_dir.tif  graph.parquet  manifest.json
crates/core/tests/fixtures/projection/: equal_earth_proj_oracle.json
crates/gdal/: Cargo.toml  README.md
crates/gdal/src/: error.rs  geometry_repair.rs  lib.rs  raster_reader.rs  wkb.rs
crates/gdal/tests/: raster_decode_parity.rs
crates/python/: API.md  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/python/python/pourpoint/: __init__.py  __init__.pyi
crates/python/python/pyshed/: __init__.py  __init__.pyi
crates/python/src/: config.rs  data_paths.rs  engine.rs  error.rs  export.rs  geojson.rs  kwargs.rs  lib.rs  result.rs  staged.rs
crates/python/tests/: conftest.py  test_behavioral.py  test_bench_trace.py  test_data_paths.py  test_phase_d.py  test_smoke.py
docs/: README.md  api-reference.md  basin-geoparquet-export.md  credits.md  how-it-works.md  index.md  quickstart.md  raster-cache.md  telemetry.md
docs/benchmarks/: delineate-harness.md
docs/decisions/: 2026-07-23-closed-form-equal-earth-in-core.md
docs/guide/: datasets.md  staged-api.md
docs/hfx-v02-redesign/: m1-step-critique.md  m1-step-plan.md  m2-step-critique.md  m2-step-plan.md  m3-step-critique.md  m3-step-plan.md  m4-step-critique.md  m4-step-plan.md  m5-export-critique.md  m5-export-plan.md  m5-migration-notes.md  m5-step-critique.md  m5-step-plan.md  milestone-plan-critique.md  milestone-plan.md
docs/plans/: docs-update-step-critique.md  docs-update-step-plan.md  v0.2-redesign-roadmap.md
docs/releases/: projected-crs-terminal-refinement.md
scripts/: bench-delineate.sh  bump-pourpoint-version.sh  generate-equal-earth-oracle.py  measure-rss.sh  phase4-smoke-r2.sh
src/: main.rs
tests/: cli_integration.rs
(+2 files in other folders)
