[workspace]
members = ["crates/*"]

[workspace.dependencies]
# HFX on-disk format 0.3.0 is implemented by the published hfx 0.5.x crate
# (crate version != format version: the 0.5.0 crate implements the 0.3.0 contract).
hfx = "0.5.0"

[package]
name = "pourpoint"
version = "0.1.189"
edition = "2024"

[dependencies]
pourpoint-core = { path = "crates/core" }
pourpoint-gdal = { path = "crates/gdal" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
geo = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = "1"
pourpoint-core = { path = "crates/core", features = ["test-fixtures"] }
