[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "pourpoint"
version = "0.3.0"
requires-python = ">=3.9"
description = "Python bindings for the pourpoint watershed delineation engine"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "LICENSES/*"]
authors = [
  { name = "Nicolas Lazaro", email = "business.coopernick@gmail.com" },
]
keywords = ["gis", "hydrology", "watershed", "delineation", "hfx", "gdal"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
]

[project.urls]
Homepage = "https://github.com/CooperBigFoot/pourpoint"
Repository = "https://github.com/CooperBigFoot/pourpoint"
Issues = "https://github.com/CooperBigFoot/pourpoint/issues"
Changelog = "https://github.com/CooperBigFoot/pourpoint/blob/main/crates/python/CHANGELOG.md"
Documentation = "https://cooperbigfoot.github.io/pourpoint/"

[project.optional-dependencies]
test = ["pytest>=8", "pyarrow>=15"]
dev = ["pourpoint[test]", "ruff", "maturin>=1.7,<2"]

[dependency-groups]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[tool.pytest.ini_options]
markers = [
    "network: tests that require a live HFX dataset URL (set POURPOINT_TEST_REMOTE_URL)",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pourpoint._pourpoint"
python-source = "python"
# This is maturin's own built-in auditwheel pass, not cibuildwheel's. It must
# stay "skip": on Linux the wheel is repaired exactly once by cibuildwheel's
# CIBW_REPAIR_WHEEL_COMMAND_LINUX (auditwheel repair); letting maturin repair
# it too would vendor the native GDAL stack into the wheel twice.
auditwheel = "skip"
include = [{ path = "python/pourpoint/_data/**/*", format = "wheel" }]
